--- a/.github/workflows/statictest.yml
+++ b/.github/workflows/statictest.yml
@@ -1,11 +1,13 @@
 name: go vet test
 
 on:
+  workflow_dispatch:
   pull_request:
   push:
     branches:
-      - master
       - main
+      - master
+      - development
 
 jobs:
   statictest:
