--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,16 @@ services:
       timeout: 3s
       retries: 10
 
-  migrate:
-    image: migrate/migrate:4
-    volumes:
-      - ./migrations:/migrations:ro
-    command: [
-      "-path", "/migrations",
-      "-database", "postgres://postgres:postgres@db:5432/postgres?sslmode=disable",
-      "up"
-    ]
-    depends_on:
-      db:
-        condition: service_healthy
-    restart: "no"
+  # migrate:
+  #   image: migrate/migrate:4
+  #   volumes:
+  #     - ./migrations:/migrations:ro
+  #   command: [
+  #     "-path", "/migrations",
+  #     "-database", "postgres://postgres:postgres@db:5432/postgres?sslmode=disable",
+  #     "up"
+  #   ]
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   restart: "no"
